--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
   crate:
     name: Publish Crate
     runs-on: ubuntu-latest
-    if: secrets.CARGO_REGISTRY_TOKEN != ''
+    if: ${{ secrets.CARGO_REGISTRY_TOKEN != '' }}
     needs: checks
     steps:
       - uses: actions/checkout@v4
