--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
+[workspace]
+members = ["crates/oauth-mock"]
+resolver = "2"
+
 [package]
 name = "greentic-conformance"
-version = "0.1.0"
-edition = "2021"
+version = "0.2.0"
+edition = "2024"
+rust-version = "1.85"
 license = "MIT"
 publish = false
 description = "Reusable conformance suites for Greentic (pack/runner/policy/oauth)"
@@ -15,12 +20,14 @@ path = "src/lib.rs"
 anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde_yaml = "0.9"
+serde_yaml_bw = "2"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
-base64 = "0.21"
+base64 = "0.22"
 walkdir = "2"
+axum = { version = "0.7", optional = true, features = ["macros", "json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
 
 greentic-types = { version = ">=0.1, <1" }
 greentic-interfaces = { version = ">=0.1, <1" }
@@ -33,13 +40,18 @@ greentic-oauth = { version = ">=0.1, <1", optional = true }
 default = ["runner", "policy", "oauth"]
 runner = ["greentic-runner", "greentic-pack"]
 policy = ["greentic-secrets"]
-oauth = ["greentic-oauth"]
+oauth = ["greentic-oauth", "axum", "reqwest"]
 
 [dev-dependencies]
 assert_cmd = "2"
 ed25519-dalek = { version = "2", features = ["rand_core"] }
-handlebars = "4"
-rand = "0.8"
+handlebars = "6"
+rand = "0.9"
 serde_json = "1"
 tempfile = "3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
+oauth-mock = { path = "crates/oauth-mock" }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+sha2 = "0.10"
+url = "2"
+jsonwebtoken = "10"
