--- a/crates/oauth-mock/Cargo.toml
+++ b/crates/oauth-mock/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "oauth-mock"
-version = "0.1.0"
-edition = "2024"
-rust-version = "1.85"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 license = "MIT"
 description = "Embedded OAuth2/OIDC mock provider for tests and CI"
 repository = "https://github.com/greentic-ai/greentic-conformance"
@@ -13,27 +13,27 @@ pkce = []
 device_code = []
 
 [dependencies]
-anyhow = "1"
-axum = { version = "0.7", features = ["macros", "json"] }
-base64 = "0.21"
-jsonwebtoken = "9"
-josekit = { version = "0.12", optional = true }
-once_cell = "1"
-rand = "0.8"
-rsa = { version = "0.9", features = ["pem", "pkcs1"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-sha2 = "0.10"
-thiserror = "1"
-time = { version = "0.3", features = ["macros"] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal", "net"] }
-url = "2"
-uuid = { version = "1", features = ["v4"] }
-openidconnect = { version = "3", optional = true }
+anyhow = { workspace = true }
+axum = { workspace = true }
+base64 = { workspace = true }
+jsonwebtoken = { workspace = true }
+josekit = { workspace = true, optional = true }
+once_cell = { workspace = true }
+rand = { workspace = true }
+rsa = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+sha2 = { workspace = true }
+thiserror = { workspace = true }
+time = { workspace = true }
+tokio = { workspace = true }
+url = { workspace = true }
+uuid = { workspace = true }
+openidconnect = { workspace = true, optional = true }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
-serde_json = "1"
-serde = { version = "1", features = ["derive"] }
-anyhow = "1"
+tokio = { workspace = true }
+reqwest = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+anyhow = { workspace = true }
