--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ resolver = "2"
 [workspace.package]
 version = "0.2.1"
 edition = "2024"
-rust-version = "1.85"
+rust-version = "1.86"
 
 [workspace.dependencies]
 anyhow = "1"
@@ -21,11 +21,11 @@ greentic-secrets = { version = ">=0.1, <1" }
 greentic-types = { version = ">=0.1, <1" }
 handlebars = "6"
 josekit = { version = "0.10" }
-jsonwebtoken = "9"
+jsonwebtoken = "10"
 oauth-mock = { path = "crates/oauth-mock" }
 once_cell = "1"
-openidconnect = { version = "3" }
-rand = "0.8"
+openidconnect = { version = "4" }
+rand = "0.9"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 rsa = { version = "0.9", features = ["pem"] }
 serde = { version = "1", features = ["derive"] }
@@ -33,7 +33,7 @@ serde_json = "1"
 serde_yaml_bw = "2"
 sha2 = "0.10"
 tempfile = "3"
-thiserror = "1"
+thiserror = "2"
 time = { version = "0.3", features = ["macros"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal", "net"] }
 tracing = "0.1"
@@ -95,6 +95,7 @@ reqwest = { workspace = true }
 sha2 = { workspace = true }
 url = { workspace = true }
 jsonwebtoken = { workspace = true }
+time = { workspace = true }
 
 [patch.crates-io]
 greentic-oauth = { path = "vendor/greentic-oauth" }
