--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ greentic-secrets = { version = ">=0.1, <1" }
 greentic-types = { version = ">=0.1, <1" }
 handlebars = "6"
 josekit = { version = "0.10" }
-jsonwebtoken = "10"
+jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
 oauth-mock = { path = "crates/oauth-mock" }
 once_cell = "1"
 openidconnect = { version = "4" }
