--- a/ci/env/conformance.hosted.example.env
+++ b/ci/env/conformance.hosted.example.env
@@ -1,14 +1,20 @@
 CS_URL=https://www.certification.openid.net
 CS_TOKEN=REPLACE_WITH_HOSTED_SUITE_TOKEN
 
-PLAN=oidcc-client-basic-certification-test-plan
+# Hosted plans must be created in the web UI. Copy the plan id here.
+PLAN_ID=REPLACE_WITH_UI_PLAN_ID
+
+# Module variant
 ALIAS=greentic-rp
 CLIENT_REG=dynamic_client
 REQUEST_TYPE=plain_http_request
 
+# RP configuration
 CONFIG_JSON=ci/plans/examples/rp-code-pkce-basic.config.json
 
 # Tunnel settings (local dev)
 USE_TUNNEL=1
 RP_LOCAL_URL=http://localhost:8080
-# RP_BASE=         # leave empty when tunnelling; set in CI/staging to your public https RP
+# For CI/staging, disable the tunnel and provide a public https RP base URL:
+# USE_TUNNEL=0
+# RP_BASE=https://rp.example.com
