--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,6 @@ jobs:
       OAUTH_GITHUB_CLIENT_ID: ${{ secrets.OAUTH_GITHUB_CLIENT_ID }}
       OAUTH_GITHUB_CLIENT_SECRET: ${{ secrets.OAUTH_GITHUB_CLIENT_SECRET }}
       OAUTH_GITHUB_REDIRECT_URI: ${{ secrets.OAUTH_GITHUB_REDIRECT_URI }}
-    if: matrix.lane != 'oauth-live' || env.OAUTH_GOOGLE_CLIENT_ID != '' || env.OAUTH_MICROSOFT_CLIENT_ID != '' || env.OAUTH_GITHUB_CLIENT_ID != ''
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -60,4 +59,9 @@ jobs:
         if: matrix.lane == 'oauth-live'
         env:
           CI_ENABLE_OAUTH_LIVE: "1"
-        run: cargo test --test oauth --features oauth -- --nocapture
+        run: |
+          if [[ -z "${OAUTH_GOOGLE_CLIENT_ID}" && -z "${OAUTH_MICROSOFT_CLIENT_ID}" && -z "${OAUTH_GITHUB_CLIENT_ID}" ]]; then
+            echo "No live OAuth credentials set; skipping oauth-live lane."
+            exit 0
+          fi
+          cargo test --test oauth --features oauth -- --nocapture
