--- a/.github/workflows/provider-google.yml
+++ b/.github/workflows/provider-google.yml
@@ -11,7 +11,6 @@ permissions:
 
 jobs:
   google-smoke:
-    if: ${{ secrets.GOOGLE_SA_JSON_B64 != '' }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
     env:
@@ -27,10 +26,9 @@ jobs:
           toolchain: 1.86.0
 
       - name: Run Google provider smoke test
+        if: ${{ env.GOOGLE_SA_JSON_B64 != '' }}
         run: cargo test --test provider_google -- --ignored --test-threads=1 google_service_account_jwt_bearer_smoke
 
-  skip:
-    if: ${{ secrets.GOOGLE_SA_JSON_B64 == '' }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Google service account secrets not configured; skipping provider smoke test."
+      - name: Skip (no Google secrets)
+        if: ${{ env.GOOGLE_SA_JSON_B64 == '' }}
+        run: echo "Google service account secrets not configured; skipping provider smoke test."
