--- a/.github/workflows/provider-google.yml
+++ b/.github/workflows/provider-google.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: read
+  actions: read
 
 jobs:
   google-smoke:
@@ -16,6 +17,9 @@ jobs:
     env:
       GOOGLE_SA_JSON_B64: ${{ secrets.GOOGLE_SA_JSON_B64 }}
       GOOGLE_SCOPE: ${{ secrets.GOOGLE_SCOPE }}
+      TENANT_ID: ci-tenant
+      TEAM_ID: ci-team
+      USER_ID: ci-user
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
