--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,11 @@ on:
     tags: [ "v*" ]   # optional: legacy; our per-crate tags are <name>-vX.Y.Z
   workflow_dispatch:
 
+env:
+  TENANT_ID: ci-tenant
+  TEAM_ID: ci-team
+  USER_ID: ci-user
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
