--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ assert_cmd = "2"
 axum = { version = "0.8", features = ["macros", "json"] }
 base64 = "0.22"
 ed25519-dalek = { version = "2", features = ["rand_core"] }
-greentic-interfaces = { version = ">=0.1, <1" }
-greentic-oauth = { version = ">=0.1, <1" }
-greentic-pack = { version = ">=0.1, <1" }
-greentic-runner = { version = ">=0.1, <1" }
-greentic-secrets = { version = ">=0.1, <1" }
-greentic-types = { version = ">=0.1, <1" }
+greentic-interfaces = { version = "0.4" }
+greentic-oauth-sdk = { version = "0.4" }
+greentic-pack = { version = "0.4" }
+greentic-runner = { version = "0.4" }
+greentic-secrets = { version = "0.4" }
+greentic-types = { version = "0.4" }
 handlebars = "6"
 josekit = { version = "0.10" }
 jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
@@ -70,6 +70,7 @@ base64 = { workspace = true }
 walkdir = { workspace = true }
 axum = { workspace = true, optional = true }
 reqwest = { workspace = true, optional = true }
+semver = { workspace = true }
 
 greentic-types = { workspace = true }
 greentic-interfaces-host = { workspace = true, optional = true }
@@ -79,11 +80,12 @@ greentic-pack = { workspace = true }
 greentic-secrets = { workspace = true, optional = true }
 greentic-oauth-sdk = { workspace = true, optional = true }
 
+
 [features]
 default = []
 runner = ["dep:greentic-runner", "dep:greentic-pack"]
 policy = ["dep:greentic-secrets", "dep:greentic-interfaces"]
-oauth = ["dep:greentic-oauth", "dep:axum", "dep:reqwest"]
+oauth = ["dep:greentic-oauth-sdk", "dep:axum", "dep:reqwest"]
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
